--- a/index.html
+++ b/index.html
@@ -14,5 +14,16 @@
   <p>Сделал множество открытий в области геометрии, предвосхитил многие идеи математического анализа. Заложил основы механики, гидростатики, был автором ряда важных изобретений. С именем Архимеда связаны многие математические понятия. Наиболее известно приближение числа π (22/7), которое называется Архимедовым числом[1]. Кроме того, его имя носят граф, ещё одно число, копула, аксиома, спираль, тело, закон и другие. Работы учёного использовали в своих сочинениях всемирно известные математики и физики XVI—XVII веков, такие, как <a href="<https://ru.wikipedia.org/wiki/%D0%9A%D0%B5%D0%BF%D0%BB%D0%B5%D1%80,_%D0%98%D0%BE%D0%B3%D0%B0%D0%BD%D0%BD>">Иоганн Кеплер</a>, <a href="<https://ru.wikipedia.org/wiki/%D0%93%D0%B0%D0%BB%D0%B8%D0%BB%D0%B5%D0%B9,_%D0%93%D0%B0%D0%BB%D0%B8%D0%BB%D0%B5%D0%BE>">Галилео Галилей</a>, <a href="<https://ru.wikipedia.org/wiki/%D0%94%D0%B5%D0%BA%D0%B0%D1%80%D1%82,_%D0%A0%D0%B5%D0%BD%D0%B5>">Рене Декарт</a> и <a href="<https://ru.wikipedia.org/wiki/%D0%A4%D0%B5%D1%80%D0%BC%D0%B0,_%D0%9F%D1%8C%D0%B5%D1%80>">Пьер Ферма</a>. Согласно современным оценкам, открытия Архимеда стали основой для дальнейшего развития математики в 1550—1650-х годах. В частности, работы Архимеда легли в основание математического анализа.</p>
   <p><img src="Fetti.jpg" alt=" «Архимед» "></p>
   <p>«Архимед», <a href="<https://ru.wikipedia.org/wiki/%D0%A4%D0%B5%D1%82%D1%82%D0%B8,_%D0%94%D0%BE%D0%BC%D0%B5%D0%BD%D0%B8%D0%BA%D0%BE>">Доменико Фетти</a>, 1620</p>
+
+  <h3><a href="<https://ru.wikipedia.org/wiki/%D0%90%D1%80%D1%85%D0%B8%D0%BC%D0%B5%D0%B4#%D0%91%D0%B8%D0%BE%D0%B3%D1%80%D0%B0%D1%84%D0%B8%D1%8F>">Биография</a></h3>
+  <ol>
+    <li><a href="<адресhttps://ru.wikipedia.org/wiki/%D0%90%D1%80%D1%85%D0%B8%D0%BC%D0%B5%D0%B4#%D0%98%D1%81%D1%82%D0%BE%D1%87%D0%BD%D0%B8%D0%BA%D0%B8>">Источники</a></li>
+    <li><a href="<https://ru.wikipedia.org/wiki/%D0%90%D1%80%D1%85%D0%B8%D0%BC%D0%B5%D0%B4#%D0%94%D0%B5%D1%82%D1%81%D1%82%D0%B2%D0%BE_%D0%B8_%D0%BE%D0%B1%D1%83%D1%87%D0%B5%D0%BD%D0%B8%D0%B5_%D0%B2_%D0%90%D0%BB%D0%B5%D0%BA%D1%81%D0%B0%D0%BD%D0%B4%D1%80%D0%B8%D0%B8>">Детство</a></li>
+    <li><a href="<https://ru.wikipedia.org/wiki/%D0%90%D1%80%D1%85%D0%B8%D0%BC%D0%B5%D0%B4#%D0%96%D0%B8%D0%B7%D0%BD%D1%8C_%D0%B2_%D0%A1%D0%B8%D1%80%D0%B0%D0%BA%D1%83%D0%B7%D0%B0%D1%85>">Жизнь в Сиракузах</a></li>
+    <li><a href="<https://ru.wikipedia.org/wiki/%D0%90%D1%80%D1%85%D0%B8%D0%BC%D0%B5%D0%B4#%D0%A1%D0%BC%D0%B5%D1%80%D1%82%D1%8C>">Смерть</a></li>
+   </ol>
+
+   
+  <h3><a href="https://ru.wikipedia.org/wiki/%D0%90%D1%80%D1%85%D0%B8%D0%BC%D0%B5%D0%B4" target="new">Wiki Original</a></h3>
 </body>
 </html>
