--- a/index.html
+++ b/index.html
@@ -4,7 +4,33 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Arhimed</title>
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <style>
+  
+    h1 { 
+      font-family: Arial, Helvetica, sans-serif;
+      text-align: center;
+      color: red;
+    }
+
+    a {
+      font-style: italic;
+    }
+
+    p { 
+      font-family: Arial, Helvetica, sans-serif;
+      font-size: 18px;
+      text-align: center;
+   }
+
+   ol {
+      list-style: none;
+      text-align: center;
+   }
+
+  
+   </style>
 </head>
 <body>
   <h1>Архимед</h1>
@@ -15,15 +41,15 @@
   <p><img src="Fetti.jpg" alt=" «Архимед» "></p>
   <p>«Архимед», <a href="<https://ru.wikipedia.org/wiki/%D0%A4%D0%B5%D1%82%D1%82%D0%B8,_%D0%94%D0%BE%D0%BC%D0%B5%D0%BD%D0%B8%D0%BA%D0%BE>">Доменико Фетти</a>, 1620</p>
 
-  <h3><a href="<https://ru.wikipedia.org/wiki/%D0%90%D1%80%D1%85%D0%B8%D0%BC%D0%B5%D0%B4#%D0%91%D0%B8%D0%BE%D0%B3%D1%80%D0%B0%D1%84%D0%B8%D1%8F>">Биография</a></h3>
+  <h1><a href="<https://ru.wikipedia.org/wiki/%D0%90%D1%80%D1%85%D0%B8%D0%BC%D0%B5%D0%B4#%D0%91%D0%B8%D0%BE%D0%B3%D1%80%D0%B0%D1%84%D0%B8%D1%8F>">Биография</a></h1>
   <ol>
-    <li><a href="<адресhttps://ru.wikipedia.org/wiki/%D0%90%D1%80%D1%85%D0%B8%D0%BC%D0%B5%D0%B4#%D0%98%D1%81%D1%82%D0%BE%D1%87%D0%BD%D0%B8%D0%BA%D0%B8>">Источники</a></li>
-    <li><a href="<https://ru.wikipedia.org/wiki/%D0%90%D1%80%D1%85%D0%B8%D0%BC%D0%B5%D0%B4#%D0%94%D0%B5%D1%82%D1%81%D1%82%D0%B2%D0%BE_%D0%B8_%D0%BE%D0%B1%D1%83%D1%87%D0%B5%D0%BD%D0%B8%D0%B5_%D0%B2_%D0%90%D0%BB%D0%B5%D0%BA%D1%81%D0%B0%D0%BD%D0%B4%D1%80%D0%B8%D0%B8>">Детство</a></li>
-    <li><a href="<https://ru.wikipedia.org/wiki/%D0%90%D1%80%D1%85%D0%B8%D0%BC%D0%B5%D0%B4#%D0%96%D0%B8%D0%B7%D0%BD%D1%8C_%D0%B2_%D0%A1%D0%B8%D1%80%D0%B0%D0%BA%D1%83%D0%B7%D0%B0%D1%85>">Жизнь в Сиракузах</a></li>
-    <li><a href="<https://ru.wikipedia.org/wiki/%D0%90%D1%80%D1%85%D0%B8%D0%BC%D0%B5%D0%B4#%D0%A1%D0%BC%D0%B5%D1%80%D1%82%D1%8C>">Смерть</a></li>
+    <li><a href="<https://ru.wikipedia.org/wiki/%D0%90%D1%80%D1%85%D0%B8%D0%BC%D0%B5%D0%B4#%D0%98%D1%81%D1%82%D0%BE%D1%87%D0%BD%D0%B8%D0%BA%D0%B8>">1. Источники</a></li>
+    <li><a href="<https://ru.wikipedia.org/wiki/%D0%90%D1%80%D1%85%D0%B8%D0%BC%D0%B5%D0%B4#%D0%94%D0%B5%D1%82%D1%81%D1%82%D0%B2%D0%BE_%D0%B8_%D0%BE%D0%B1%D1%83%D1%87%D0%B5%D0%BD%D0%B8%D0%B5_%D0%B2_%D0%90%D0%BB%D0%B5%D0%BA%D1%81%D0%B0%D0%BD%D0%B4%D1%80%D0%B8%D0%B8>">2. Детство</a></li>
+    <li><a href="<https://ru.wikipedia.org/wiki/%D0%90%D1%80%D1%85%D0%B8%D0%BC%D0%B5%D0%B4#%D0%96%D0%B8%D0%B7%D0%BD%D1%8C_%D0%B2_%D0%A1%D0%B8%D1%80%D0%B0%D0%BA%D1%83%D0%B7%D0%B0%D1%85>">3. Жизнь в Сиракузах</a></li>
+    <li><a href="<https://ru.wikipedia.org/wiki/%D0%90%D1%80%D1%85%D0%B8%D0%BC%D0%B5%D0%B4#%D0%A1%D0%BC%D0%B5%D1%80%D1%82%D1%8C>">4. Смерть</a></li>
    </ol>
 
    
-  <h3><a href="https://ru.wikipedia.org/wiki/%D0%90%D1%80%D1%85%D0%B8%D0%BC%D0%B5%D0%B4" target="new">Wiki Original</a></h3>
+  <h1><a href="<https://ru.wikipedia.org/wiki/%D0%90%D1%80%D1%85%D0%B8%D0%BC%D0%B5%D0%B4" target="new">Wiki Original</a></h1>
 </body>
 </html>
